--- a/Views/Employees/Create.cshtml
+++ b/Views/Employees/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create Employee Record";
 }
 
-<h2>Create New Employee Record</h2>
+<h2>Create a New Employee Record</h2>
 
 
 @using (Html.BeginForm()) 
