--- a/Views/Bills/Index.cshtml
+++ b/Views/Bills/Index.cshtml
@@ -4,18 +4,16 @@
     ViewBag.Title = "Patient Bill";
 }
 
-<h2>Patient Bill</h2>
-
+<div class=“well”>
+    <h2>Patient Bill</h2>
+</div>
 <p>
     @Html.ActionLink("Create New Patient Bill", "Create")
 </p>
-<table class="table">
+<table class="table table-striped table-bordered table-condensed">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Patient.firstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Patient.lastName)
+            @Html.DisplayNameFor(model => model.Patient.fullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.amount)
@@ -26,26 +24,24 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Patient.firstName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Patient.lastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.amount)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.status)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.billID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.billID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.billID })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Patient.fullName)
+            </td>
+            <td class="text-left">
+                @Html.DisplayFor(modelItem => item.amount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.status)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.billID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.billID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.billID })
+            </td>
+        </tr>
+    }
 
 </table>
