--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h2>Temiloluwa Omorinsola Olubakinde</h2>
     <p class="lead">This is my first MVC app created for my MIS 4200 class. Hope you enjoy the app features!</p>
-    <p><a href="http://cob.ohio.edu" class="btn btn-primary btn-lg">COB &raquo;</a></p>
+    <p><a href="http://cob.ohio.edu" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-education"></span> &raquo;</a></p>
 </div>
 
 <div class="row">
