--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,21 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                  
                 </ul>
+                <span class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Employee:Patient
+                        <span class="caret"></span>
+                        <span class="glyphicon glyphicon-menu"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
+                        <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
+                        <li>@Html.ActionLink("Appointments", "Index", "Appointments")</li>
+                        <li>@Html.ActionLink("Bills", "Index", "Bills")</li>
+                        <li>@Html.ActionLink("Payments", "Index", "Payments")</li>
+                    </ul>
+                </span>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
