--- a/Content/Site.css
+++ b/Content/Site.css
@@ -22,3 +22,18 @@ select,
 textarea {
     max-width: 280px;
 }
+.jumbotron {
+    background-color: slategrey;
+    color: white;
+}
+
+.navbar-inverse {
+    background-color: slategrey;
+}
+    .navbar-inverse .navbar-nav > li > a {
+        color: white;
+    }
+    .navbar-inverse .navbar-brand {
+        color: white;
+    }
+
