--- a/Views/Appointments/Delete.cshtml
+++ b/Views/Appointments/Delete.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Delete Appointment";
 }
-
-<h2>Delete Patient Appointment</h2>
-
+<div class=“well”>
+    <h2>Delete Patient Appointment</h2>
+</div>
 <h3>Are you sure you want to delete this appointment?</h3>
 <div>
 
@@ -52,7 +52,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
