--- a/Views/Bills/Delete.cshtml
+++ b/Views/Bills/Delete.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Delete Bill";
 }
-
-<h2>Delete Patient Bill</h2>
-
+<div class=“well”>
+    <h2>Delete Patient Bill</h2>
+</div>
 <h3>Are you sure you want to delete this patient bill?</h3>
 <div>
 
@@ -36,7 +36,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
