--- a/Views/Bills/Details.cshtml
+++ b/Views/Bills/Details.cshtml
@@ -3,39 +3,39 @@
 @{
     ViewBag.Title = "Details of Bill";
 }
-
-<h2>Details of Patient Bill</h2>
-
-<div>
-
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Patient)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Patient.fullName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.amount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.amount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.status)
-        </dd>
-
-    </dl>
+<div class=“well”>
+    <h2>Details of Patient Bill</h2>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.billID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+    <div>
+
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Patient)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Patient.fullName)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.amount)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.amount)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.status)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.status)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.billID }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
