--- a/Views/Employees/Delete.cshtml
+++ b/Views/Employees/Delete.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Delete Employee Record";
 }
-
-<h2>Delete Employee Record</h2>
-
+<div class=“well”>
+    <h2>Delete Employee Record</h2>
+</div>
 <h3>Are you sure you want to delete this employee record?</h3>
 <div>
 
@@ -60,7 +60,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
