--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -4,18 +4,16 @@
     ViewBag.Title = "Employee Records";
 }
 
-<h2>Employee Records</h2>
-
+<div class=“well”>
+    <h2>Employee Records</h2>
+</div>
 <p>
     @Html.ActionLink("Create New Employee Record", "Create")
 </p>
-<table class="table">
+<table class="table table-striped table-bordered table-condensed">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.firstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.lastName)
+            @Html.DisplayNameFor(model => model.fullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.phone)
@@ -32,32 +30,30 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.firstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.lastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.areaOfSpeciality)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.dateOfEmployment)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.employeesID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.employeesID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.employeesID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <span class="label label-primary">@Html.DisplayFor(modelItem => item.fullName)</span>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.areaOfSpeciality)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.dateOfEmployment)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.employeesID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.employeesID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.employeesID })
+            </td>
+        </tr>
+    }
 
 </table>
