--- a/Views/Patients/Index.cshtml
+++ b/Views/Patients/Index.cshtml
@@ -4,18 +4,16 @@
     ViewBag.Title = "Patient Record";
 }
 
-<h2>Patient Record</h2>
-
+<div class=“well”>
+    <h2>Patient Record</h2>
+</div>
 <p>
     @Html.ActionLink("Create New Patient Record", "Create")
 </p>
-<table class="table">
+<table class="table table-striped table-bordered table-condensed">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.firstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.lastName)
+            @Html.DisplayNameFor(model => model.fullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.phone)
@@ -32,32 +30,30 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.firstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.lastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.city)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.zip)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.patientID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.patientID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.patientID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <span class="label label-primary">@Html.DisplayFor(modelItem => item.fullName)</span>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.city)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.zip)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.patientID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.patientID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.patientID })
+            </td>
+        </tr>
+    }
 
 </table>
